Copying object crashes Blender #111488

Closed
opened 2023-08-24 21:13:52 +02:00 by kursad k · 7 comments
Member

System Information
Operating system: Windows 11
Graphics card: RTX 2070

Blender Version
Broken: 7c2dc5183d
Worked: 39a40d6f84

Exact steps for others to reproduce the error
Add an icosphere
Ctrl C

# Blender 4.0.0, Commit date: 2023-08-23 19:52, Hash 7c2dc5183d03
bpy.ops.mesh.primitive_ico_sphere_add(radius=1, enter_editmode=False, align='WORLD', location=(0, 0, 0), scale=(1, 1, 1))  # Operator

# backtrace
Exception Record:

ExceptionCode         : EXCEPTION_ACCESS_VIOLATION
Exception Address     : 0x00007FF7D4C3DA2C
Exception Module      : blender.exe
Exception Flags       : 0x00000000
Exception Parameters  : 0x2
	Parameters[0] : 0x0000000000000000
	Parameters[1] : 0x0000000000000010


Stack trace:
blender.exe         :0x00007FF7D4C3D9B0  BLO_expand_main
blender.exe         :0x00007FF7D4873960  BKE_blendfile_write_partial
blender.exe         :0x00007FF7D8DFCC80  BKE_copybuffer_copy_end
blender.exe         :0x00007FF7D5804960  view3d_copybuffer_exec
blender.exe         :0x00007FF7D4BF3F10  wm_operator_invoke
blender.exe         :0x00007FF7D4BF3510  wm_operator_call_internal
blender.exe         :0x00007FF7D4BEB6B0  WM_operator_name_call_ptr_with_depends_on_cursor
blender.exe         :0x00007FF7D55B9C70  ui_apply_but_funcs_after
blender.exe         :0x00007FF7D55CA1F0  ui_popup_handler
blender.exe         :0x00007FF7D4BF25C0  wm_handlers_do_intern
blender.exe         :0x00007FF7D4BF17B0  wm_handlers_do
blender.exe         :0x00007FF7D4BEE170  wm_event_do_handlers
blender.exe         :0x00007FF7D4BD5F90  WM_main
blender.exe         :0x00007FF7D464A970  main
blender.exe         :0x00007FF7D8D25024  __scrt_common_main_seh
KERNEL32.DLL        :0x00007FFDEAA35540  BaseThreadInitThunk
ntdll.dll           :0x00007FFDEBB44830  RtlUserThreadStart


**System Information** Operating system: Windows 11 Graphics card: RTX 2070 **Blender Version** Broken: 7c2dc5183d03 Worked: 39a40d6f84 **Exact steps for others to reproduce the error** Add an icosphere Ctrl C ``` # Blender 4.0.0, Commit date: 2023-08-23 19:52, Hash 7c2dc5183d03 bpy.ops.mesh.primitive_ico_sphere_add(radius=1, enter_editmode=False, align='WORLD', location=(0, 0, 0), scale=(1, 1, 1)) # Operator # backtrace Exception Record: ExceptionCode : EXCEPTION_ACCESS_VIOLATION Exception Address : 0x00007FF7D4C3DA2C Exception Module : blender.exe Exception Flags : 0x00000000 Exception Parameters : 0x2 Parameters[0] : 0x0000000000000000 Parameters[1] : 0x0000000000000010 Stack trace: blender.exe :0x00007FF7D4C3D9B0 BLO_expand_main blender.exe :0x00007FF7D4873960 BKE_blendfile_write_partial blender.exe :0x00007FF7D8DFCC80 BKE_copybuffer_copy_end blender.exe :0x00007FF7D5804960 view3d_copybuffer_exec blender.exe :0x00007FF7D4BF3F10 wm_operator_invoke blender.exe :0x00007FF7D4BF3510 wm_operator_call_internal blender.exe :0x00007FF7D4BEB6B0 WM_operator_name_call_ptr_with_depends_on_cursor blender.exe :0x00007FF7D55B9C70 ui_apply_but_funcs_after blender.exe :0x00007FF7D55CA1F0 ui_popup_handler blender.exe :0x00007FF7D4BF25C0 wm_handlers_do_intern blender.exe :0x00007FF7D4BF17B0 wm_handlers_do blender.exe :0x00007FF7D4BEE170 wm_event_do_handlers blender.exe :0x00007FF7D4BD5F90 WM_main blender.exe :0x00007FF7D464A970 main blender.exe :0x00007FF7D8D25024 __scrt_common_main_seh KERNEL32.DLL :0x00007FFDEAA35540 BaseThreadInitThunk ntdll.dll :0x00007FFDEBB44830 RtlUserThreadStart ```
kursad k added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-08-24 21:13:53 +02:00

Unable to reproduce here.

Unable to reproduce here.
Author
Member

Not sure, I was able to repeat it with the factory defaults/scene. I do not get the crash with 3.6.2

Not sure, I was able to repeat it with the factory defaults/scene. I do not get the crash with 3.6.2

Version:Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-24 21:18, hash: ed5110c0ef4a

I have the same problem here.

Version:Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-24 21:18, hash: `ed5110c0ef4a` I have the same problem here.
Member

Works fine on 39a40d6f84 (linux), will test latest.

Works fine on 39a40d6f84a658d078 (linux), will test latest.

Works fine on 39a40d6f84 (linux), will test latest.

Crash on windows.
Windows only?

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99

> Works fine on 39a40d6f84a658d078 (linux), will test latest. Crash on windows. Windows only? **System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99
Member

Can crash on 4d757510be.

Can crash on 4d757510bec574f0e65.
YimingWu added
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2023-08-25 04:51:41 +02:00
YimingWu added the
Module
Pipeline, Assets & IO
label 2023-08-25 04:53:15 +02:00
Member

broken by 8bb5916183 , cc @mont29

broken by 8bb5916183fb25c07dffaa00cfcb8e2863cebe41 , cc @mont29
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-25 11:04:13 +02:00
Bastien Montagne added
Module
Core
Interest
BlendFile
Type
Bug
and removed
Module
Pipeline, Assets & IO
Type
Report
labels 2023-08-25 11:05:18 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111488
No description provided.