Fix #111488: Copying object crashes Blender after recent refactor.

Caused by 8bb5916183.

Trivial mistake, would have been caught by a basic test, so also added
said test for the 'write partial' feature.